--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "sass": "^1.69.7"
   },
   "devDependencies": {
+    "@types/leaflet": "^1.9.8",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
